Added new buttons for #12

--- a/src/Watts Happening/res/layout/activity_watts_happening.xml
+++ b/src/Watts Happening/res/layout/activity_watts_happening.xml
@@ -23,4 +23,22 @@
         android:layout_marginRight="23dp"
         android:text="@string/stop_button" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/button1"
+        android:layout_marginTop="23dp"
+        android:text="@string/db_flush_button" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_below="@+id/button3"
+        android:layout_marginTop="16dp"
+        android:text="@string/db_export_button" />
+
 </RelativeLayout>
