--- a/src/Watts Happening/res/layout/activity_watts_happening.xml
+++ b/src/Watts Happening/res/layout/activity_watts_happening.xml
@@ -41,4 +41,13 @@
         android:layout_marginTop="16dp"
         android:text="@string/db_export_button" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button4"
+        android:layout_below="@+id/button4"
+        android:layout_marginTop="27dp"
+        android:text="@string/analysis_button" />
+
 </RelativeLayout>
