--- a/src/Watts Happening/res/layout/activity_watts_happening.xml
+++ b/src/Watts Happening/res/layout/activity_watts_happening.xml
@@ -78,17 +78,22 @@
             <LinearLayout
                 android:id="@+id/tab2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:orientation="vertical" >
 
                 <Button
                     android:id="@+id/button6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/button4"
-                    android:layout_below="@+id/button4"
                     android:layout_marginTop="22dp"
                     android:layout_marginLeft="22dp"
                     android:text="sample tab2 button" />
+                <TextView
+                    android:id="@+id/tv1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
+                    android:layout_marginLeft="22dp"/>
             </LinearLayout>
         </FrameLayout>
     </LinearLayout>
