--- a/src/Watts Happening/res/layout/activity_watts_happening.xml
+++ b/src/Watts Happening/res/layout/activity_watts_happening.xml
@@ -89,7 +89,13 @@
                     android:layout_marginLeft="22dp"
                     android:text="sample tab2 button" />
                 <TextView
-                    android:id="@+id/tv1"
+                    android:id="@+id/tvcpu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
+                    android:layout_marginLeft="22dp"/>
+                <TextView
+                    android:id="@+id/tvnet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="22dp"
